statum-macros/tests/ui/invalid_transition_unknown_machine.stderr
error: Error: no `#[machine]` named `DoesNotExist` was found in module `invalid_transition_unknown_machine`.
       Available `#[machine]` items in this module: Machine.
       Fix: apply `#[transition]` to an impl for the machine type generated by `#[machine]` in this module.
  --> tests/ui/invalid_transition_unknown_machine.rs:20:6
   |
20 | impl DoesNotExist<A> {
   |      ^^^^^^^^^^^^
